Set up 'images' file and began the project in earnest.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<p>Dennis Segall</p>
+<!doctype html>
+<html>
+<head>
+    <title>Telluride Bluegrass Festival - Dennis Segall</title>
+<link rel="stylesheet" type="text/css" href="main.css"/>    
+</head>
+<body>
+   <header>
+       <h1>A family adventure to the Telluride Bluegrass Festival</h1>
+   </header>
+   <main>
+       <section>    
+         <p>In June of 2017, my wife and I took our two sons, ages 9 and 11, on a grand road trip. We set out to enjoy a long weekend of camping and music at the 44th annual "Telluride Bluegrass Festival".</p>
+         <figure>
+            <img src="images/Telluride-downtown.jpg" alt="The view of Ingram Falls from the entrance to Telluride."/>
+            <figcaption>Telluride, Colorado is an historic small town nestled in the San Juan Mountains in Southwestern Colorado.</figcaption>
+         </figure>
+       </section>
+
+   </main>
+</body>      
+</html>
