Page concept and story is laid out further.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,62 @@
 <body>
    <header>
        <h1>A family adventure to the Telluride Bluegrass Festival</h1>
+       <nav>
+           <ul>
+               <li>
+                   <a href="#the drive">The Drive</a>
+               </li>
+               <li>
+                   <a href="#camping">Camping</a>
+               </li>
+               <li>
+                   <a href="#the town">Exploring the Town</a>
+               </li>
+               <li>
+                   <a href="#the festival">The Festival</a>
+               </li>
+               <li>
+                   <a href="#the takeaway">The Takeaway</a>
+               </li>
+            </ul>
+       </nav>
    </header>
    <main>
-       <section>    
-         <p>In June of 2017, my wife and I took our two sons, ages 9 and 11, on a grand road trip. We set out to enjoy a long weekend of camping and music at the 44th annual "Telluride Bluegrass Festival".</p>
-         <figure>
+       <article>    
+       <p>In June of 2017, my wife and I took our family on a grand road trip. We set out to enjoy a long weekend of camping and music at the 44th annual "Telluride Bluegrass Festival".</p>
+       <figure>
             <img src="images/Telluride-downtown.jpg" alt="The view of Ingram Falls from the entrance to Telluride."/>
-            <figcaption>Telluride, Colorado is an historic small town nestled in the San Juan Mountains in Southwestern Colorado.</figcaption>
-         </figure>
+            <figcaption>Telluride, in southwest Colorado, is an historic small town nestled in the San Juan Mountains.</figcaption>
+       </figure>
+       </article>
+       <section>
+            <a name="the drive"></a>
+            <h2>The Drive</h2>
+            <p></p>
        </section>
-
+       <section>
+           <a name="camping"></a>
+           <h2>Camping</h2>
+           <p></p>
+       </section>
+       <section>
+           <a name="the town"></a>
+           <h2>Exploring the Town</h2>
+           <p></p>
+       </section>
+       <section>
+           <a name="festival"></a>
+           <h2>The Festival</h2>
+           <p></p>
+       </section>
+       <section>
+           <a name="the takeaway"></a>
+           <h2>The Takeaway</h2>
+           <p></p>
+       </section>   
    </main>
-</body>      
+</body>
+<footer>
+<p>&copy 2019 Dennis Segall</p>
+</footer>      
 </html>
