--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
-<head>
-    <title>Telluride Bluegrass Festival - Dennis Segall</title>
-<link rel="stylesheet" type="text/css" href="main.css"/>    
-</head>
-<body>
-   <header>
-       <h1>A family adventure to the Telluride Bluegrass Festival</h1>
-       <nav>
-           <ul>
+   <head>
+      <title>Telluride Bluegrass Festival - Dennis Segall</title>
+      <link rel="stylesheet" type="text/css" href="main.css"/>    
+   </head>
+   <body>
+      <header>
+         <h1>A family adventure to the Telluride Bluegrass Festival</h1>
+         <nav>
+            <ul>
                <li>
                    <a href="#the drive">The Drive</a>
                </li>
@@ -16,53 +16,111 @@
                    <a href="#camping">Camping</a>
                </li>
                <li>
-                   <a href="#the town">Exploring the Town</a>
+                   <a href="#the festival">The Festival</a>
                </li>
                <li>
-                   <a href="#the festival">The Festival</a>
+                   <a href="#the town">Exploring the Town</a>
                </li>
                <li>
                    <a href="#the takeaway">The Takeaway</a>
                </li>
             </ul>
-       </nav>
-   </header>
+         </nav>
+      </header>
    <main>
-       <article>    
-       <p>In June of 2017, my wife and I took our family on a grand road trip. We set out to enjoy a long weekend of camping and music at the 44th annual "Telluride Bluegrass Festival".</p>
-       <figure>
-            <img src="images/Telluride-downtown.jpg" alt="The view of Ingram Falls from the entrance to Telluride."/>
-            <figcaption>Telluride, in southwest Colorado, is an historic small town nestled in the San Juan Mountains.</figcaption>
-       </figure>
-       </article>
-       <section>
-            <a name="the drive"></a>
-            <h2>The Drive</h2>
-            <p></p>
-       </section>
-       <section>
-           <a name="camping"></a>
-           <h2>Camping</h2>
-           <p></p>
-       </section>
-       <section>
-           <a name="the town"></a>
-           <h2>Exploring the Town</h2>
-           <p></p>
-       </section>
-       <section>
-           <a name="festival"></a>
-           <h2>The Festival</h2>
-           <p></p>
-       </section>
-       <section>
-           <a name="the takeaway"></a>
-           <h2>The Takeaway</h2>
-           <p></p>
-       </section>   
+       <article>
+          <section>    
+             <p>In June of 2017, my wife and I took our family on a grand road trip. We set out to enjoy a long weekend of camping and music at the 44th annual "Telluride Bluegrass Festival".</p>
+             <figure>
+             <img src="images/Telluride-downtown.jpg" alt="The view of Ingram Falls from the entrance to Telluride."/>
+             <figcaption>Telluride, in southwest Colorado, is an historic small town nestled in the San Juan Mountains.</figcaption>
+             </figure>
+          </section>    
+          <section>
+             <a name="the drive"></a>
+             <h2>The Drive</h2>
+             <p></p>
+             <figure>
+                <img src="images/Telluride-ColleenDriving_2.jpg" alt="A photo of my wife driving." />
+                <figcaption>My wife, Colleen, driving while wearing her latest antique store treasure, some fancy sunglasses on a chain.</figcaption>
+             </figure>
+             <figure>
+                <img src="images/RattlesnakeSign_2.jpg" alt="A sign that reads 'Watch For Rattlesnakes'." />
+                <figcaption>A sign at a rest area in southwest Colorado.</figcaption>
+             </figure>
+             <figure>
+                <img src="images/Rattler_2.jpg" alt="A leopard print slipper under a picnic table. From  a distance, it looks quite like a rattlesnake." />
+                <figcaption>Here we see a well played prank. Beneath a picnic table that sits opposite the above sign, a leopard print slipper slithers menacingly. This was enough to make a midwestern heart skip a beat! </figcaption>
+             </figure>
+             <figure>
+                <img src="images/san miguel valley_2.jpg" alt="A photo of the San Miguel Valley" />
+                <figcaption>As we approach Telluride, the view in every direction is dominated by snowcapped mountains.</figcaption>
+                </figure>                             
+          </section>
+          <section>
+             <a name="camping"></a>
+             <h2>Camping</h2>
+             <p></p>
+             <figure>
+                <img src="images/tel_tent-view_2.JPG" alt="A photo of tents in the morning light with mountains in the background." />
+                <figcaption>The view from within the tent on our first morning in the mountains.</figcaption>
+             </figure>
+             <figure>
+                <img src="images/Telluride camp_site_2.JPG" alt="A photo of a wide, smooth gravel riverbend with mountains in the distance." />
+                <figcaption>Our tent was pitched on the bank of Boulder Creek. It was refreshingly cool in the heat of the day. At night, the water's sounds were constant and soothing.</figcaption>
+             </figure>
+             <figure>
+                <img src="images/fellow-campers.jpg" alt="A photo of joyful festival goers." />
+                <figcaption>It took very little time to make some new freinds.</figcaption>
+             </figure>
+          </section>
+          <section>
+             <a name="the festival"></a>
+             <h2>The Festival</h2>
+             <p></p>
+             <figure>
+                <img src="images/another-crowd-pic.jpg" alt="A photo of the crowd in front of the festival main stage." />
+                <figcaption>The evening main stage performances bring crowds to enjoy the world class music and breathtaking views of sunset.</figcaption>
+             </figure>
+             <figure>
+                <img src="images/view from stage.jpg" alt="A photo of a performer entertaining a large crowd while surrounded by mountains." />
+                <figcaption>The view from stage </figcaption>
+             </figure>
+             <figure>
+                 <img src="images/Telluride LucasDevilSticks_2.JPG" alt="A photo of a boy playing with 'devil sticks'." />
+                 <figcaption>My son, Lucas, practicing a new skill in the family area of the festival grounds.</figcaption>
+             </figure>
+          </section>
+          <section>
+             <a name="the town"></a>
+             <h2>Exploring the town</h2>
+             <p></p>
+             <figure>
+                <img src="images/Telluride GondolaCaleb_2.JPG" alt="A boy smiling while riding a gondola car high in the mountains." />
+                <figcaption>My son , Caleb enjoying the ride on the gondola that connects Telluride with mountain communities and ski slopes.</figcaption>
+             </figure>
+             <figure>
+                <img src="images/Baked in Telluride.jpg" alt="A bakery in a large, red, wooden building." />
+                <figcaption>A local landmark, "Baked in Telluride" serves bakery treats from bagels and donuts to pizza and burritos. It is a favorite rendevouz spot for festival goers as well as locals.</figcaption>
+             </figure>
+             <figure>
+                <img src="images/Telluride Dennis_2.JPG" alt="The author facing the camera." />
+                <figcaption>Here I pose while on a walk through town.</figcaption>
+             </figure>
+          </section>
+          <section>
+             <a name="the takeaway"></a>
+             <h2>The Takeaway</h2>
+             <p></p>
+             <figure>
+                <img src="images/Telluride PictureFrame_2.JPG" alt="The author and family posing in the evening sun on the festival grounds." />
+                <figcaption>My family poses in a "picturesque" setting.</figcaption>
+             </figure>
+          </section>
+       </article>  
    </main>
 </body>
 <footer>
-<p>&copy 2019 Dennis Segall</p>
+   <p>&copy 2019 Dennis Segall</p>
 </footer>      
 </html>
