normalize.css created and work began on styles.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
    <head>
       <title>Telluride Bluegrass Festival - Dennis Segall</title>
-      <link rel="stylesheet" type="text/css" href="main.css"/>    
+      <link rel="stylesheet" type="text/css" href="styles.css"/>
+      <link rel="stylesheet" type="text/css" href="normalize.css"/>    
    </head>
    <body>
       <header>
@@ -39,7 +40,7 @@
           <section>
              <a name="the drive"></a>
              <h2>The Drive</h2>
-             <p></p>
+             <p>We left St. Louis filled with excitement. As we drove, my wife and I tried to prepare our children for the mountain experience ahead. Sunscreen, lip-balm, and constant hydration are key for survival.</p>
              <figure>
                 <img src="images/Telluride-ColleenDriving_2.jpg" alt="A photo of my wife driving." />
                 <figcaption>My wife, Colleen, driving while wearing her latest antique store treasure, some fancy sunglasses on a chain.</figcaption>
@@ -60,7 +61,7 @@
           <section>
              <a name="camping"></a>
              <h2>Camping</h2>
-             <p></p>
+             <p>Because we had the coveted "Town Park" tickets, our camp site was located in the town of Telluride itself. We pitched our tent and made a camp on the shady bank of Boulder Creek. At an altitude of nearly 9,000 feet, the sun was intense during the day and the nights were quite cold.</p>
              <figure>
                 <img src="images/tel_tent-view_2.JPG" alt="A photo of tents in the morning light with mountains in the background." />
                 <figcaption>The view from within the tent on our first morning in the mountains.</figcaption>
@@ -77,14 +78,14 @@
           <section>
              <a name="the festival"></a>
              <h2>The Festival</h2>
-             <p></p>
+             <p>The town of Telluride is famous for its music and film festivals. The city's infrastructure and culture are built around decades of producing enormous, peaceful, and environmentally conscious festival for many thousands of people. One can really tell that the festival organizers have refined the art of throwing a party. </p>
              <figure>
                 <img src="images/another-crowd-pic.jpg" alt="A photo of the crowd in front of the festival main stage." />
                 <figcaption>The evening main stage performances bring crowds to enjoy the world class music and breathtaking views of sunset.</figcaption>
              </figure>
              <figure>
                 <img src="images/view from stage.jpg" alt="A photo of a performer entertaining a large crowd while surrounded by mountains." />
-                <figcaption>The view from stage </figcaption>
+                <figcaption>The view from stage can make an impression on even the most experienced performer.</figcaption>
              </figure>
              <figure>
                  <img src="images/Telluride LucasDevilSticks_2.JPG" alt="A photo of a boy playing with 'devil sticks'." />
@@ -94,7 +95,7 @@
           <section>
              <a name="the town"></a>
              <h2>Exploring the town</h2>
-             <p></p>
+             <p>With roots in the mining boom of the 19th century, Telluride has evolved to become a town focused on tourism and skiing. It's remote beauty and an "outlaw" reputation have made it a popular place for celebrities from Oprah Winfrey to Tom Cruise. The exclusive mountain communities that surround the small town are an enclave of the rich and famous.</p>
              <figure>
                 <img src="images/Telluride GondolaCaleb_2.JPG" alt="A boy smiling while riding a gondola car high in the mountains." />
                 <figcaption>My son , Caleb enjoying the ride on the gondola that connects Telluride with mountain communities and ski slopes.</figcaption>
@@ -111,7 +112,7 @@
           <section>
              <a name="the takeaway"></a>
              <h2>The Takeaway</h2>
-             <p></p>
+             <p>The majesty of the mountains, the joy of celebrating summer with family and friends, and the inspiring beauty of nature and music made a great family adventure.</p>
              <figure>
                 <img src="images/Telluride PictureFrame_2.JPG" alt="The author and family posing in the evening sun on the festival grounds." />
                 <figcaption>My family poses in a "picturesque" setting.</figcaption>
