added class and id to img and fig

--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!doctype html>
 <html>
    <head>
-      <title>Telluride Bluegrass Festival - Dennis Segall</title>
+      <title>A Trip to the Telluride Bluegrass Festival - Dennis Segall</title>
       <link rel="stylesheet" type="text/css" href="styles.css"/>
       <link rel="stylesheet" type="text/css" href="normalize.css"/>    
    </head>
    <body>
       <header>
-         <h1>A family adventure to the Telluride Bluegrass Festival</h1>
+         <h1>A Trip to the 2017 Telluride Bluegrass Festival</h1>
          <nav>
             <ul>
                <li>
                    <a href="#the drive">The Drive</a>
                </li>
                <li>
-                   <a href="#camping">Camping</a>
+                   <a href="#the camping">The Camping</a>
                </li>
                <li>
                    <a href="#the festival">The Festival</a>
                </li>
                <li>
-                   <a href="#the town">Exploring the Town</a>
+                   <a href="#the town">The Town</a>
                </li>
                <li>
                    <a href="#the takeaway">The Takeaway</a>
@@ -41,37 +41,37 @@
              <a name="the drive"></a>
              <h2>The Drive</h2>
              <p>We left St. Louis filled with excitement. As we drove, my wife and I tried to prepare our children for the mountain experience ahead. Sunscreen, lip-balm, and constant hydration are key for survival.</p>
-             <figure>
-                <img src="images/Telluride-ColleenDriving_2.jpg" alt="A photo of my wife driving." />
+             <figure id="Colleen">
+                <img src="images/Telluride-ColleenDriving.jpg" alt="Colleen driving." />
                 <figcaption>My wife, Colleen, driving while wearing her latest antique store treasure, some fancy sunglasses on a chain.</figcaption>
-             </figure>
-             <figure>
-                <img src="images/RattlesnakeSign_2.jpg" alt="A sign that reads 'Watch For Rattlesnakes'." />
+             </figure>  
+             <figure id="sign">
+                <img class="sideways" src="images/RattlesnakeSign.jpg" alt="A sign says 'Watch For Rattlesnakes'." />
                 <figcaption>A sign at a rest area in southwest Colorado.</figcaption>
-             </figure>
-             <figure>
-                <img src="images/Rattler_2.jpg" alt="A leopard print slipper under a picnic table. From  a distance, it looks quite like a rattlesnake." />
+             </figure>   
+             <figure id="slipper">
+                <img class="sideways" src="images/Rattler.jpg" alt="A leopard print slipper under a picnic table." />
                 <figcaption>Here we see a well played prank. Beneath a picnic table that sits opposite the above sign, a leopard print slipper slithers menacingly. This was enough to make a midwestern heart skip a beat! </figcaption>
              </figure>
-             <figure>
-                <img src="images/san miguel valley_2.jpg" alt="A photo of the San Miguel Valley" />
+             <figure id="view">
+                <img src="images/san miguel valley.jpg" alt="The San Miguel Valley" />
                 <figcaption>As we approach Telluride, the view in every direction is dominated by snowcapped mountains.</figcaption>
                 </figure>                             
           </section>
           <section>
-             <a name="camping"></a>
+             <a name="the camping"></a>
              <h2>Camping</h2>
-             <p>Because we had the coveted "Town Park" tickets, our camp site was located in the town of Telluride itself. We pitched our tent and made a camp on the shady bank of Boulder Creek. At an altitude of nearly 9,000 feet, the sun was intense during the day and the nights were quite cold.</p>
-             <figure>
-                <img src="images/tel_tent-view_2.JPG" alt="A photo of tents in the morning light with mountains in the background." />
+             <p>Because we had the coveted "Town Park" tickets, our camp site was located in the town of Telluride itself. We pitched our tent and made a camp on the shady bank of the San Miguel River. At an altitude of nearly 9,000 feet, the sun was intense during the day and the nights were quite cold.</p>
+             <figure id="tent">
+                <img class="sideways" src="images/Telluride tent_view.JPG" alt="Tents in the morning light with mountains in the background." />
                 <figcaption>The view from within the tent on our first morning in the mountains.</figcaption>
              </figure>
-             <figure>
-                <img src="images/Telluride camp_site_2.JPG" alt="A photo of a wide, smooth gravel riverbend with mountains in the distance." />
-                <figcaption>Our tent was pitched on the bank of Boulder Creek. It was refreshingly cool in the heat of the day. At night, the water's sounds were constant and soothing.</figcaption>
+             <figure id="river">
+                <img class="sideways" src="images/Telluride camp_site.JPG" alt="Tents and people by a river with mountains in the distance." />
+                <figcaption>Our tent was pitched on the bank of the San Miguel River. It was refreshingly cool in the heat of the day. At night, the water's sounds were constant and soothing.</figcaption>
              </figure>
-             <figure>
-                <img src="images/fellow-campers.jpg" alt="A photo of joyful festival goers." />
+             <figure id="friends">
+                <img src="images/fellow-campers.jpg" alt="Joyful bluegrass fans." />
                 <figcaption>It took very little time to make some new freinds.</figcaption>
              </figure>
           </section>
@@ -79,33 +79,33 @@
              <a name="the festival"></a>
              <h2>The Festival</h2>
              <p>The town of Telluride is famous for its music and film festivals. The city's infrastructure and culture are built around decades of producing enormous, peaceful, and environmentally conscious festival for many thousands of people. One can really tell that the festival organizers have refined the art of throwing a party. </p>
-             <figure>
-                <img src="images/another-crowd-pic.jpg" alt="A photo of the crowd in front of the festival main stage." />
+             <figure id="mainStage">
+                <img src="images/another-crowd-pic.jpg" alt="A large crowd in front of the festival main stage." />
                 <figcaption>The evening main stage performances bring crowds to enjoy the world class music and breathtaking views of sunset.</figcaption>
              </figure>
-             <figure>
-                <img src="images/view from stage.jpg" alt="A photo of a performer entertaining a large crowd while surrounded by mountains." />
+             <figure id="fromTheStage">
+                <img src="images/view from stage.jpg" alt="A performer entertains a large crowd while surrounded by mountains." />
                 <figcaption>The view from stage can make an impression on even the most experienced performer.</figcaption>
              </figure>
-             <figure>
-                 <img src="images/Telluride LucasDevilSticks_2.JPG" alt="A photo of a boy playing with 'devil sticks'." />
-                 <figcaption>My son, Lucas, practicing a new skill in the family area of the festival grounds.</figcaption>
+             <figure id="Lucas">
+                 <img class="sideways" src="images/Telluride LucasDevilSticks.JPG" alt="Lucas playing with 'devil sticks'." />
+                 <figcaption>My son, Lucas, enjoyed the family area of the festival grounds. In this photo he is practicing tricks with a pair of 'devil sticks' in an open area with many other children his age while the music fills the air.</figcaption>
              </figure>
           </section>
           <section>
              <a name="the town"></a>
              <h2>Exploring the town</h2>
              <p>With roots in the mining boom of the 19th century, Telluride has evolved to become a town focused on tourism and skiing. It's remote beauty and an "outlaw" reputation have made it a popular place for celebrities from Oprah Winfrey to Tom Cruise. The exclusive mountain communities that surround the small town are an enclave of the rich and famous.</p>
-             <figure>
-                <img src="images/Telluride GondolaCaleb_2.JPG" alt="A boy smiling while riding a gondola car high in the mountains." />
+             <figure id="Caleb">
+                <img class="sideways" src="images/Telluride GondolaCaleb.JPG" alt="Caleb smiling while riding  in a gondola car high in the mountains." />
                 <figcaption>My son , Caleb enjoying the ride on the gondola that connects Telluride with mountain communities and ski slopes.</figcaption>
              </figure>
-             <figure>
+             <figure id="bakery">
                 <img src="images/Baked in Telluride.jpg" alt="A bakery in a large, red, wooden building." />
                 <figcaption>A local landmark, "Baked in Telluride" serves bakery treats from bagels and donuts to pizza and burritos. It is a favorite rendevouz spot for festival goers as well as locals.</figcaption>
              </figure>
-             <figure>
-                <img src="images/Telluride Dennis_2.JPG" alt="The author facing the camera." />
+             <figure id="Dennis">
+                <img class="sideways" src="images/Telluride Dennis_2.JPG" alt="The author facing the camera." />
                 <figcaption>Here I pose while on a walk through town.</figcaption>
              </figure>
           </section>
@@ -113,12 +113,12 @@
              <a name="the takeaway"></a>
              <h2>The Takeaway</h2>
              <p>The majesty of the mountains, the joy of celebrating summer with family and friends, and the inspiring beauty of nature and music made a great family adventure.</p>
-             <figure>
-                <img src="images/Telluride PictureFrame_2.JPG" alt="The author and family posing in the evening sun on the festival grounds." />
+             <figure id="family">
+                <img class="sideways" src="images/Telluride PictureFrame.JPG" alt="The author and family posing in the evening sun on the festival grounds." />
                 <figcaption>My family poses in a "picturesque" setting.</figcaption>
              </figure>
           </section>
-       </article>  
+       </article>
    </main>
 </body>
 <footer>
