added color, font, and better padding

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
              </figure>
              <figure id="friends">
                 <img src="images/fellow-campers.jpg" alt="Joyful bluegrass fans." />
-                <figcaption>It took very little time to make some new freinds.</figcaption>
+                <figcaption>It took very little time to make some new friends.</figcaption>
              </figure>
           </section>
           <section>
@@ -89,7 +89,7 @@
              </figure>
              <figure id="Lucas">
                  <img class="sideways" src="images/Telluride LucasDevilSticks.JPG" alt="Lucas playing with 'devil sticks'." />
-                 <figcaption>My son, Lucas, enjoyed the family area of the festival grounds. In this photo he is practicing tricks with a pair of 'devil sticks' in an open area with many other children his age while the music fills the air.</figcaption>
+                 <figcaption>My son, Lucas is practicing tricks with a pair of 'devil sticks'. While music filled the air, children enjoyed a special area of the festival grounds to practice circus skills and crafts. There is a colorful parade of festival made floats on the last day of the weekend. </figcaption>
              </figure>
           </section>
           <section>
@@ -98,7 +98,7 @@
              <p>With roots in the mining boom of the 19th century, Telluride has evolved to become a town focused on tourism and skiing. It's remote beauty and an "outlaw" reputation have made it a popular place for celebrities from Oprah Winfrey to Tom Cruise. The exclusive mountain communities that surround the small town are an enclave of the rich and famous.</p>
              <figure id="Caleb">
                 <img class="sideways" src="images/Telluride GondolaCaleb.JPG" alt="Caleb smiling while riding  in a gondola car high in the mountains." />
-                <figcaption>My son , Caleb enjoying the ride on the gondola that connects Telluride with mountain communities and ski slopes.</figcaption>
+                <figcaption>My son, Caleb enjoying the ride on the gondola that connects Telluride with mountain communities and ski slopes.</figcaption>
              </figure>
              <figure id="bakery">
                 <img src="images/Baked in Telluride.jpg" alt="A bakery in a large, red, wooden building." />
@@ -106,7 +106,7 @@
              </figure>
              <figure id="Dennis">
                 <img class="sideways" src="images/Telluride Dennis_2.JPG" alt="The author facing the camera." />
-                <figcaption>Here I pose while on a walk through town.</figcaption>
+                <figcaption>Here, I am enjoying a  walk through town.</figcaption>
              </figure>
           </section>
           <section>
@@ -115,7 +115,7 @@
              <p>The majesty of the mountains, the joy of celebrating summer with family and friends, and the inspiring beauty of nature and music made a great family adventure.</p>
              <figure id="family">
                 <img class="sideways" src="images/Telluride PictureFrame.JPG" alt="The author and family posing in the evening sun on the festival grounds." />
-                <figcaption>My family poses in a "picturesque" setting.</figcaption>
+                <figcaption>My family in a "picturesque" setting.</figcaption>
              </figure>
           </section>
        </article>
