changed some pics and added background photo top-DONE!

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" type="text/css" href="normalize.css"/>    
    </head>
    <body>
-      <header>
+      <header class="top">
          <h1>A Trip to the 2017 Telluride Bluegrass Festival</h1>
          <nav>
             <ul>
@@ -33,7 +33,7 @@
           <section>    
              <p>In June of 2017, my wife and I took our family on a grand road trip. We set out to enjoy a long weekend of camping and music at the 44th annual "Telluride Bluegrass Festival".</p>
              <figure>
-             <img src="images/Telluride-downtown.jpg" alt="The view of Ingram Falls from the entrance to Telluride."/>
+             <img id="downtown" src="images/Telluride-downtown.jpg" alt="The view of Ingram Falls from the entrance to Telluride."/>
              <figcaption>Telluride, in southwest Colorado, is an historic small town nestled in the San Juan Mountains.</figcaption>
              </figure>
           </section>    
@@ -84,7 +84,7 @@
                 <figcaption>The evening main stage performances bring crowds to enjoy the world class music and breathtaking views of sunset.</figcaption>
              </figure>
              <figure id="fromTheStage">
-                <img src="images/view from stage.jpg" alt="A performer entertains a large crowd while surrounded by mountains." />
+                <img src="images/stage-view.jpg" alt="A performer entertains a large crowd while surrounded by mountains." />
                 <figcaption>The view from stage can make an impression on even the most experienced performer.</figcaption>
              </figure>
              <figure id="Lucas">
@@ -95,7 +95,7 @@
           <section>
              <a name="the town"></a>
              <h2>Exploring the town</h2>
-             <p>With roots in the mining boom of the 19th century, Telluride has evolved to become a town focused on tourism and skiing. It's remote beauty and an "outlaw" reputation have made it a popular place for celebrities from Oprah Winfrey to Tom Cruise. The exclusive mountain communities that surround the small town are an enclave of the rich and famous.</p>
+             <p>With roots in the mining boom of the 19th century, Telluride has evolved to become a town focused on tourism and skiing. It's remote beauty and an "outlaw" reputation have made it a popular place for celebrities like Oprah Winfrey and Tom Cruise. The exclusive mountain communities that surround the small town are an enclave of the rich and famous.</p>
              <figure id="Caleb">
                 <img class="sideways" src="images/Telluride GondolaCaleb.JPG" alt="Caleb smiling while riding  in a gondola car high in the mountains." />
                 <figcaption>My son, Caleb enjoying the ride on the gondola that connects Telluride with mountain communities and ski slopes.</figcaption>
